// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select matches snapshot for errorText: errorText mount 1`] = `
.emotion-33 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-33 {
    margin-bottom: 30px;
  }
}

.emotion-28 {
  margin-bottom: 0;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-28 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-28 {
    margin-bottom: 30px;
  }
}

.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 0;
  margin-bottom: 20px;
}

.emotion-25:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-25 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-25 {
    margin-bottom: 30px;
  }
}

.emotion-8 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  display: block;
  margin-bottom: 15px;
  color: #6f777b;
}

@media print {
  .emotion-8 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

.emotion-15 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  display: block;
  margin-bottom: 15px;
  clear: both;
  color: #b10e1e;
}

@media print {
  .emotion-15 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .emotion-15 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

.emotion-21 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-21 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-21:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<StyledHoc
  errorText="example"
  hint="example"
  input={Object {}}
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <Select
    className="emotion-33 emotion-0"
    errorText="example"
    hint="example"
    input={Object {}}
    label="example"
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <StyledHoc
      className="emotion-33 emotion-0"
      error="example"
      errorText="example"
    >
      <Label
        className="emotion-0 emotion-28 emotion-0"
        error="example"
        errorText="example"
      >
        <StyledLabel
          className="emotion-0 emotion-28 emotion-0"
          error="example"
          errorText="example"
        >
          <label
            className="emotion-0 emotion-0 emotion-25 emotion-26"
          >
            <StyledHoc>
              <LabelText
                className="emotion-3 emotion-0"
              >
                <StyledLabelText
                  className="emotion-3 emotion-0"
                >
                  <span
                    className="emotion-0 emotion-1 emotion-2"
                  >
                    example
                  </span>
                </StyledLabelText>
              </LabelText>
            </StyledHoc>
            <StyledHoc>
              <HintText
                className="emotion-10 emotion-0"
              >
                <StyledHint
                  className="emotion-10 emotion-0"
                >
                  <span
                    className="emotion-0 emotion-8 emotion-9"
                  >
                    example
                  </span>
                </StyledHint>
              </HintText>
            </StyledHoc>
            <StyledHoc>
              <ErrorText
                className="emotion-10 emotion-0"
              >
                <StyledError
                  className="emotion-10 emotion-0"
                >
                  <span
                    className="emotion-0 emotion-15 emotion-16"
                  >
                    example
                  </span>
                </StyledError>
              </ErrorText>
            </StyledHoc>
            <StyledSelect
              error="example"
            >
              <select
                className="emotion-21 emotion-22"
              >
                example
              </select>
            </StyledSelect>
          </label>
        </StyledLabel>
      </Label>
    </StyledHoc>
  </Select>
</StyledHoc>
`;

exports[`Select matches snapshot: enzyme.mount 1`] = `
.emotion-19 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-19 {
    margin-bottom: 30px;
  }
}

.emotion-14 {
  margin-bottom: 0;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    margin-bottom: 30px;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
  margin-bottom: 20px;
}

.emotion-11:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-11 {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:641px) {
  .emotion-11 {
    margin-bottom: 30px;
  }
}

.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-7 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-7:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<StyledHoc
  input={Object {}}
  label="example"
  meta={Object {}}
>
  <Select
    className="emotion-19 emotion-0"
    input={Object {}}
    label="example"
    meta={Object {}}
  >
    <StyledHoc
      className="emotion-19 emotion-0"
    >
      <Label
        className="emotion-0 emotion-14 emotion-0"
      >
        <StyledLabel
          className="emotion-0 emotion-14 emotion-0"
        >
          <label
            className="emotion-0 emotion-0 emotion-11 emotion-12"
          >
            <StyledHoc>
              <LabelText
                className="emotion-3 emotion-0"
              >
                <StyledLabelText
                  className="emotion-3 emotion-0"
                >
                  <span
                    className="emotion-0 emotion-1 emotion-2"
                  >
                    example
                  </span>
                </StyledLabelText>
              </LabelText>
            </StyledHoc>
            <StyledSelect>
              <select
                className="emotion-7 emotion-8"
              >
                example
              </select>
            </StyledSelect>
          </label>
        </StyledLabel>
      </Label>
    </StyledHoc>
  </Select>
</StyledHoc>
`;
